Devise Email setting

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,5 +1,8 @@
 development:
   DATABASE_PASSWORD: ''
+  DOMAIN: 'gmail.com'
+  USERNAME: <%=ENV['chentset@gmail.com']%>
+  PASSWORD: <%=ENV['test33686390']%>
 
 test:
   DATABASE_PASSWORD: ''
