--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 
 before_script: 
   - bundle install --jobs=3 --retry=3
-  - cp config/database.travic.yml config/database.yml
+  - cp config/database.travis.yml config/database.yml
   - bundle exec rake db:create
 
 script:
