--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
