--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "select2": "^4.0.13",
     "stimulus": "^1.1.1",
     "tailwindcss": "^1.7.6",
     "turbolinks": "^5.2.0"
