修改ws_new頁面、修改聊天室畫面、修改邀請code、修改錯誤訊息、增加i18n

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ yarn-debug.log*
 # Ignore application configuration
 /config/application.yml
 /config/database.yml
+/config/credentials/development.key
