--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,10 @@ yarn-debug.log*
 # Ignore application configuration
 /config/application.yml
 /config/database.yml
-/config/credentials/development.key.yml
-/config/credentials/development.enc.yml
+
+# Ignore credentails and related file
+/config/credentials.yml.enc
+/config/master.key
 
 # ngrok.sh backup file before modfied it
 config/environments/development.rb.bak
