--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "slack_clone",
   "private": true,
   "dependencies": {
+    "@joeattardi/emoji-button": "^4.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
