--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,11 @@
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
-
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
 
+/public/uploaded
 /public/assets
 .byebug_history
 
