--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "select2": "^4.0.13",
     "stimulus": "^1.1.1",
     "tailwindcss": "^1.7.6",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "uppy": "^1.21.1"
   },
   "version": "0.1.0",
   "devDependencies": {
