--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "install": "^0.13.0",
     "select2": "^4.0.13",
     "stimulus": "^1.1.1",
     "jquery": "^3.5.1",
