--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "slack_clone",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "jquery": "^3.5.1",
     "select2": "^4.0.13",
     "stimulus": "^1.1.1",
-    "jquery": "^3.5.1",
     "tailwindcss": "^1.7.6",
     "turbolinks": "^5.2.0"
   },
