--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "ckeditor5-custom-build": "file:./ckeditor5",
     "jquery": "^3.5.1",
     "install": "^0.13.0",
     "select2": "^4.0.13",
