--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -84,12 +84,19 @@ test:
   public_output_path: packs-test
 
 
-staging:
+demo:
   <<: *default
   compile: false
   extract_css: true
   cache_manifest: true
 
+
+staging:
+  <<: *default
+  compile: false
+  extract_css: true
+  cache_manifest: true
+  
   
 production:
   <<: *default
