Add demo section

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -90,6 +90,11 @@ staging:
   extract_css: true
   cache_manifest: true
 
+demo:
+  <<: *default
+  compile: false
+  extract_css: true
+  cache_manifest: true
   
 production:
   <<: *default
